--- a/.github/workflows/build_geoasset.yml
+++ b/.github/workflows/build_geoasset.yml
@@ -28,6 +28,8 @@ jobs:
           echo "OISD_SMALL=https://small.oisd.nl/dnsmasq" >> $GITHUB_ENV
           echo "OISD_NSFW=https://nsfw.oisd.nl/dnsmasq" >> $GITHUB_ENV
           echo "OISD_NSFW_SMALL=https://nsfw-small.oisd.nl/dnsmasq" >> $GITHUB_ENV
+          
+          # Kloning repo ke geoip-build/asset
           git clone --depth 1 -b asset https://github.com/${{ github.repository }} geoip-build/asset
 
       - name: Setup Go for GEOIP
@@ -41,17 +43,27 @@ jobs:
       - name: Build GEOIP
         run: |
           cd geoip-build/asset
+          
+          # Ekstrak semua aset
           for file in *.{tar.gz,zip}; do
             [[ $file == *.tar.gz ]] && tar -xvzf "$file"
             [[ $file == *.zip ]] && unzip "$file"
           done
+          
           cd ..
           mkdir -p geolite2
+          
+          # Pindahkah aset terunduh ke geolite2
           cp asset/GeoLite2-Country_*/*.mmdb geolite2/
           cp asset/GeoLite2-ASN_*/*.mmdb geolite2/
           cp asset/GeoLite2-ASN-CSV_*/*.csv geolite2/
           cp asset/GeoLite2-Country-CSV_*/*.csv geolite2/
           cp asset/GeoLite2-Country-CSV_*/{GeoLite2-Country-Blocks-IPv4*,GeoLite2-Country-Locations-en}.csv geolite2/
+          
+          # Salin aset untuk diterbitkann
+          cp geolite2/GeoLite2-ASN.mmdb ../publish/GeoLite2-ASN.mmdb
+          
+          # Jalankan pembangunan
           go mod tidy
           go build ./
           ./geoip convert -c ./config.json
@@ -66,36 +78,55 @@ jobs:
 
       - name: Build GEOSITE
         run: |
-          git clone --depth 1 https://github.com/v2fly/domain-list-community community
+          # Kloning ke domain-list-community
+          git clone --depth 1 https://github.com/v2fly/domain-list-community
+          
           cd geosite-build
-          go mod tidy
-          curl -sSL $OISD_SMALL | perl -ne 'if(/^server=\/([^\/]+)\//){$d=$1;if($d!~/^(googlesyndication\.com|pagead2\.googlesyndication\.com|gambar123\.com)$/){print "$d\n"}}' > ../community/data/oisd-small
+          
+          # Pengecualian domain di oisd-small dan oisd-nsfw-small 
+          curl -sSL $OISD_SMALL | perl -ne 'if(/^server=\/([^\/]+)\//){$d=$1;if($d!~/^(googlesyndication\.com|pagead2\.googlesyndication\.com|gambar123\.com)$/){print "$d\n"}}' > ../domain-list-community/data/oisd-small
+
           exclude=$(paste -sd'|' exclude_list.txt)
-          curl -sSL $OISD_NSFW_SMALL | perl -ne '/^server=\/([^\/]+)\// && print "$1\n"' | grep -vE "$exclude" > ../community/data/oisd-nsfw-small
-          cp raven_nsfw ../community/data/raven_nsfw
-          go run ./ --datapath=../community/data
+          curl -sSL $OISD_NSFW_SMALL | perl -ne '/^server=\/([^\/]+)\// && print "$1\n"' | grep -vE "$exclude" > ../domain-list-community/data/oisd-nsfw-small
+          cp raven_nsfw ../domain-list-community/data/raven_nsfw
+
+          # Jalankan pembangunan
+          go mod tidy
+          go run ./ --datapath=../domain-list-community/data
 
       - name: Build Sing-Box assets
         run: |
-          git clone --depth 1 https://github.com/MetaCubeX/meta-rules-converter meta-rules-converter
+          # Kloning meta-rules-converter
+          git clone --depth 1 https://github.com/MetaCubeX/meta-rules-converter
+
+          # Folder untuk branch sing-box
           mkdir -p sing-rule/geo/{geosite,geoip} sing-rule/asn
+
+          # Convert RSC to JSON
           curl -s -o nice.rsc http://ixp.mikrotik.co.id/download/nice.rsc
-          echo '{"version":4,"rules":[{"ip_cidr":[' > nice.json
-          grep -oP 'address="\K[0-9./]+' nice.rsc | grep '/' | sed 's/.*/"&",/' >> nice.json
-          sed -i '$ s/,$//' nice.json
-          echo ']}]}' >> nice.json
+          grep -oP 'address="\K[0-9./]+' nice.rsc | grep '/' | \
+          awk 'BEGIN {print "{\n  \"version\": 4,\n  \"rules\": [\n    {\n      \"ip_cidr\": ["}
+              {print "        \"" $0 "\","}
+              END {print "      ]\n    }\n  ]\n}"}' > nice.json
+
           cp nice.json ./publish/nice.json
+
+          # Pasang binari sing-box dan konversi
           curl -fsSL https://sing-box.app/install.sh | sh -s -- --beta
           sing-box rule-set compile --output ./publish/nice.srs nice.json
+          
+          # Jalankan pembangunan geo dan asn
           cd meta-rules-converter
           go run ./ geosite -f ../geosite-build/publish/geosite.dat -o ../sing-rule/geo/geosite -t sing-box
           go run ./ geoip -f ../publish/GeoIP.dat -o ../sing-rule/geo/geoip -t sing-box
+          
           cp ../geoip-build/geolite2/GeoLite2-ASN.mmdb .
           go run ./ asn -o ../sing-rule/asn -t sing-box
 
       - name: Push sing-box branch
         run: |
           cd sing-rule
+          
           git init
           git config --local user.name "github-actions[bot]"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -107,8 +138,7 @@ jobs:
 
       - name: Move final assets
         run: |
-          install -Dp ./geoip-build/geolite2/GeoLite2-ASN.mmdb ./publish/GeoLite2-ASN.mmdb
-          install -Dp ./geosite-build/publish/geosite.dat ./publish/GeoSite.dat
+          ls publish
 
       - name: Upload release
         uses: svenstaro/upload-release-action@v2
