--- a/.github/workflows/build_geoasset.yml
+++ b/.github/workflows/build_geoasset.yml
@@ -107,6 +107,8 @@ jobs:
 
           # Convert RSC to JSON
           curl -s -o nice.rsc http://ixp.mikrotik.co.id/download/nice.rsc
+          ls
+          readlink -f nice.rsc
           grep -oP 'address="\K[0-9./]+' nice.rsc | grep '/' | \
           awk '
           BEGIN {
@@ -126,7 +128,7 @@ jobs:
 
           # Pasang binari sing-box dan konversi
           curl -fsSL https://sing-box.app/install.sh | sh -s -- --beta
-          sing-box rule-set compile --output ./publish/nice.srs nice.json
+          sing-box rule-set compile --output ./publish/nice.srs ./publish/nice.json
           
           # Jalankan pembangunan geo dan asn
           cd meta-rules-converter
