--- a/.github/workflows/build_geoasset.yml
+++ b/.github/workflows/build_geoasset.yml
@@ -132,7 +132,7 @@ jobs:
           
           # Jalankan pembangunan geo dan asn
           cd meta-rules-converter
-          go run ./ geosite -f ../geosite-build/publish/geosite.dat -o ../sing-rule/geo/geosite -t sing-box
+          go run ./ geosite -f ../publish/GeoSite.dat -o ../sing-rule/geo/geosite -t sing-box
           go run ./ geoip -f ../publish/GeoIP.dat -o ../sing-rule/geo/geoip -t sing-box
           
           cp ../geoip-build/geolite2/GeoLite2-ASN.mmdb .
