--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -43,18 +43,22 @@ jobs:
 
       - name: Build proxy list
         run: |
+          mkdir -p proxy-build/Proxy
           cd proxy-build
-          mkdir -p Output
           python main.py
+          
+          cd ..
 
-      - name: Git push assets to "asset" branch
+      - name: Git push Proxy to "asset" branch
         run: |
-          cd proxy-build/Output || exit 1
           git init
           git config --local user.name "github-actions[bot]"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git checkout -b asset
-          git add .
-          git commit -m "Released on ${{ env.BUILDTIME }}"
           git remote add origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
-          git push -f -u origin asset
+          git fetch origin asset || true
+          git checkout -b asset origin/asset || git checkout -b asset
+          mkdir -p Proxy
+          cp -r proxy-build/Proxy/* ./Proxy/ 2>/dev/null || true
+          git add Proxy
+          git commit -m "Update Proxy list on ${{ env.BUILDTIME }}" || echo "No changes to commit"
+          git push origin asset
