--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -1,7 +1,7 @@
 name: Build Proxy List
 on:
   schedule:
-    - cron: "0 17 * * *"
+    - cron: "0 */12 * * *"
   workflow_dispatch:
   repository_dispatch:
 
