--- a/.github/workflows/build_geoasset.yml
+++ b/.github/workflows/build_geoasset.yml
@@ -56,7 +56,9 @@ jobs:
             [[ $file == *.zip ]] && unzip "$file"
           done
           
-          cd ...
+          cd ..
+          pwd
+          ls
           mkdir -p geolite2
           
           # Pindahkah aset terunduh ke geolite2
