--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -26,11 +26,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      # Build proxy list
-      - name: Checkout main
-        run: |
-          git checkout main
-
       - name: Set up Python version
         uses: actions/setup-python@v5
         with:
@@ -56,6 +51,8 @@ jobs:
           cd proxy-build
           python main.py
           cp -r proxy_list.txt ../Proxy/
+          pwd
+          ls
           cd ..
 
       - name: Checkout "asset" branch
@@ -65,6 +62,9 @@ jobs:
 
       - name: Commit & push Output
         run: |
+          pwd
+          ls
+          ls Proxy
           git add Proxy
           git commit -m "Update proxy list on ${{ env.BUILDTIME }}" || echo "No changes to commit"
           git push origin asset
