--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -51,24 +51,36 @@ jobs:
           mkdir -p tmp_output
           cp source/proxy-build/proxy_list.txt tmp_output/
 
-      # Checkout asset branch ke folder berbeda
-      - name: Checkout asset branch
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          ref: asset
-          path: asset    # <== branch asset di folder asset/
+      # Siapkan repo lokal baru untuk branch 'asset' di folder 'asset/'
+      # Jika 'asset' belum ada di remote → buat orphan branch
+      - name: Prepare local repo for 'asset' branch (create if missing)
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          rm -rf asset
+          mkdir -p asset
+          cd asset
+          git init
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git remote add origin "https://${{ github.actor }}:${GH_TOKEN}@github.com/${{ github.repository }}"
+          if git ls-remote --exit-code --heads origin asset; then
+            git fetch origin asset
+            git checkout -b asset origin/asset
+          else
+            git checkout --orphan asset
+          fi
+          cd ..
 
-      - name: Copy build results to asset
+      # Salin hanya hasil build ke branch 'asset'
+      - name: Copy build results to asset/Proxy
         run: |
           mkdir -p asset/Proxy
-          cp -r tmp_output/* asset/Proxy/
+          cp source/proxy-build/proxy_list.txt asset/Proxy/
 
       - name: Commit & push Proxy
         run: |
           cd asset
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add Proxy
           git commit -m "Update proxy list on ${{ env.BUILDTIME }}" || echo "No changes to commit"
-          git push origin asset
+          git push -u origin asset
