Fix workflow files.

--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -48,6 +48,8 @@ jobs:
           pip install -r requirements.txt -qq
           python main.py
           cd ../..
+          mkdir -p tmp_output
+          cp source/proxy-build/proxy_list.txt tmp_output/
 
       # Siapkan repo lokal baru untuk branch 'asset' di folder 'asset/'
       # Jika 'asset' belum ada di remote → buat orphan branch
