--- a/.github/workflows/get_asset.yml
+++ b/.github/workflows/get_asset.yml
@@ -18,30 +18,56 @@ jobs:
           sudo locale-gen id_ID.UTF-8
           echo "BUILDTIME=$(LC_TIME=id_ID.UTF-8 date '+%A, %d %B %Y - %H:%M:%S')" >> $GITHUB_ENV
 
-      - name: Checkout codebase
+      # Checkout branch main untuk ambil source proxy-build
+      - name: Checkout main branch
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0   # penting supaya fetch semua branch termasuk asset
-
-      - name: Checkout "asset" branch
-        run: |
-          git fetch origin asset || true
-          git checkout -B asset origin/asset || git checkout -B asset
+          fetch-depth: 0
+          ref: main
+          path: source   # <== disimpan di folder source/
 
       - name: Download Maxmind asset
         env:
           LICENSE_KEY: ${{ secrets.MAXMIND_GEOLITE2_LICENSE }}
         run: |
-          mkdir -p GEO
-          curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-ASN&license_key=${LICENSE_KEY}&suffix=tar.gz" -o GEO/GeoLite2-ASN.tar.gz
-          curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-ASN-CSV&license_key=${LICENSE_KEY}&suffix=zip" -o GEO/GeoLite2-ASN-CSV.zip
-          curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country&license_key=${LICENSE_KEY}&suffix=tar.gz" -o GEO/GeoLite2-Country.tar.gz
-          curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country-CSV&license_key=${LICENSE_KEY}&suffix=zip" -o GEO/GeoLite2-Country-CSV.zip
+          cd source
+          mkdir -p geo_output
+          curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-ASN&license_key=${LICENSE_KEY}&suffix=tar.gz" -o geo_output/GeoLite2-ASN.tar.gz
+          curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-ASN-CSV&license_key=${LICENSE_KEY}&suffix=zip" -o geo_output/GeoLite2-ASN-CSV.zip
+          curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country&license_key=${LICENSE_KEY}&suffix=tar.gz" -o geo_output/GeoLite2-Country.tar.gz
+          curl -L "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country-CSV&license_key=${LICENSE_KEY}&suffix=zip" -o geo_output/GeoLite2-Country-CSV.zip
+          
+          cd ..
 
-      - name: Commit & push GEO
+      # Siapkan repo lokal baru untuk branch 'asset' di folder 'asset/'
+      # Jika 'asset' belum ada di remote → buat orphan branch
+      - name: Prepare local repo for 'asset' branch (create if missing)
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          rm -rf asset
+          mkdir -p asset
+          cd asset
+          git init
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git remote add origin "https://${{ github.actor }}:${GH_TOKEN}@github.com/${{ github.repository }}"
+          if git ls-remote --exit-code --heads origin asset; then
+            git fetch origin asset
+            git checkout -b asset origin/asset
+          else
+            git checkout --orphan asset
+          fi
+          cd ..
+
+      - name: Copy downloaded asset  to asset/GEO
+        run: |
+          mkdir -p asset/GEO
+          cp -r source/geo_output/* asset/GEO/
+
+      - name: Commit & push
+        run: |
+          cd asset
           git add GEO
           git commit -m "Update GEO on ${{ env.BUILDTIME }}" || echo "No changes to commit"
-          git push origin asset
+          git push -u origin asset
