--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -1,6 +1,7 @@
 name: Build Proxy List
+on:
   schedule:
-    - cron: "0 */12 * * *"
+    - cron: "0 */3 * * *" # 3 jam sekali
   workflow_dispatch:
   repository_dispatch:
 
