--- a/.github/workflows/build_proxy.yml
+++ b/.github/workflows/build_proxy.yml
@@ -88,7 +88,7 @@ jobs:
       - name: Copy build results to asset/Proxy
         run: |
           mkdir -p asset/Proxy
-          cp source/proxy-build/proxy_list.txt asset/Proxy/
+          cp ${{ env.V2rayFormatResultPath }} asset/Proxy/
 
       - name: Commit & push Proxy
         run: |
